Create: Create the page 'account'
Will create the page 'account'

--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -42,7 +42,7 @@
 }
 
 .header {
-    background: map.get($colors, 'almostBlack');
+    background: map.get($colors, 'darkExtra');
     padding-top: rem(16);
     position: fixed;
     left: 0;
