--- a/src/pages/Bonus/style.module.scss
+++ b/src/pages/Bonus/style.module.scss
@@ -1,8 +1,50 @@
 @use "sass:map";
 @import '../../utils/utilsStyles/rem.scss';
 @import '../../utils/utilsStyles/colors.scss';
+@import '../../utils/utilsStyles/mainColor.scss';
 
-.bonus{
+.bonus {
     width: 100%;
     background-color: map.get($colors, 'darkExtra');
+    margin-top: rem(132);
+    color: map.get($colors, 'vanilla');
+    padding-bottom: rem(50);
 }
+
+.container {
+    padding-top: rem(50);
+}
+
+.title {
+    margin-bottom: rem(10);
+    @extend %mainColor;
+}
+
+.listInfo {
+    display: flex;
+    margin-bottom: rem(20);
+
+    >li {
+        span {
+            margin: 0 rem(10);
+        }
+    }
+
+    li {
+        &:last-child {
+            color: map.get($colors, 'warmDark');
+        }
+    }
+}
+
+.text {
+    margin-bottom: rem(40);
+    max-width: rem(955);
+}
+
+.list{
+    margin-bottom: rem(10);
+    max-width: rem(955);
+}
+
+@import './media.scss';
