Create: Create the page 'documation'
Will create the page 'documation'

--- a/src/pages/Catalog/components/GoodsInfo/style.scss
+++ b/src/pages/Catalog/components/GoodsInfo/style.scss
@@ -3,7 +3,7 @@
 @import '../../../../utils/utilsStyles/colors.scss';
 
 
-.select-active {
+.goodsInfoSelect.select-active {
     >div {
         background: map.get($colors, 'gradientMain');
 
