--- a/src/utils/utilsStyles/colors.scss
+++ b/src/utils/utilsStyles/colors.scss
@@ -14,4 +14,5 @@ $colors: (
     'dark': rgba(14, 13, 12, 1),
     'warmDark': rgba(122, 115, 100, 1),
     'warmGray': rgba(95, 87, 76, 1),
+    "reddishOrange": rgba(224, 91, 73, 1),
 );
