--- a/src/components/Header/style.module.scss
+++ b/src/components/Header/style.module.scss
@@ -146,6 +146,27 @@
 
 .basket {
     cursor: pointer;
+    position: relative;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+     > div{
+        font-weight: 700;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background-color: map.get($colors, 'reddishOrange');
+        color: #000;
+        font-size: rem(12);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 0;
+        right: 0;
+     }
 }
 
 // CATALOG........
