Create: Create the page 'checkout' also create reducers for interaction with the component 'checkout'
Will create the page 'checkout' also reducers for interaction with the
component 'checkout'

--- a/src/pages/Account/components/Bonus/media.scss
+++ b/src/pages/Account/components/Bonus/media.scss
@@ -10,6 +10,11 @@
         align-items: flex-start;
     }
 
+    .indexation::after {
+        content: "";
+        transform: translate(0%, -50%);
+    }
+
     .bodyInfo {
         margin-bottom: rem(30);
     }
