--- a/src/pages/Account/components/Bonus/style.module.scss
+++ b/src/pages/Account/components/Bonus/style.module.scss
@@ -129,7 +129,7 @@
     }
 
     &:last-child {
-        right: 0;
+        right: -3%;
         @include hoverInfo('Постоянный покупатель');
     }
 
