--- a/client/src/pages/Bonus/style.module.scss
+++ b/client/src/pages/Bonus/style.module.scss
@@ -6,9 +6,8 @@
 .bonus {
     width: 100%;
     background-color: map.get($colors, 'darkExtra');
-    margin-top: rem(132);
+    padding: rem(132) 0 rem(50) 0;
     color: map.get($colors, 'vanilla');
-    padding-bottom: rem(50);
     font-family: "Open Sans";
 }
 
