--- a/client/src/components/Header/media.scss
+++ b/client/src/components/Header/media.scss
@@ -17,7 +17,8 @@
 
 @media (max-width: 39.5em) {
   .header {
-    min-height: 60px;
+    min-height: rem(90);
+    padding: rem(10) 0 rem(20) 0;
   }
 
   .sectionMenu {
