Refact: refact the component 'header'

--- a/client/src/components/Header/media.scss
+++ b/client/src/components/Header/media.scss
@@ -243,11 +243,16 @@
       justify-content: center;
     }
   }
+
+  .headerScroll{
+    padding: 0;
+    min-height: 0;
+  }
 }
 
 @media (max-width: map.get($breakpoints, "tebletExtra")) {
   .logo img {
-    width: 50px;
+    width: 60px;
   }
 
   .activeHeader .select {
